--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
-    "notify-js-legacy": "^0.4.1"
+    "notify-js-legacy": "^0.4.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "1.0.0",
   "main": "index.js",
   "author": "Fábio Coelho <fabioolivc@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack-dev-server": "^3"
+  }
 }
